Update Norwegian Bokmål dpkg translation
Closes: #457918

--- a/po/nb.po
+++ b/po/nb.po
@@ -3,13 +3,13 @@
 # Gaute Hvoslef Kvalnes <gaute@verdsveven.com>, 2003, 2004.
 # Håvard Korsvoll <korsvoll@skulelinux.no>, 2003, 2004.
 # Bjorn Steensrud <bjornst@powertech.no>, 2004.
-# Hans Fredrik Nordhaug <hans@nordhaug.priv.no>, 2005-2006.
+# Hans Fredrik Nordhaug <hans@nordhaug.priv.no>, 2005-2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: dpkg 1.13\n"
+"Project-Id-Version: dpkg\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-12-19 09:36+0100\n"
-"PO-Revision-Date: 2006-10-15 23:32+0100\n"
+"PO-Revision-Date: 2007-12-26 21:36+0100\n"
 "Last-Translator: Hans Fredrik Nordhaug <hans@nordhaug.priv.no>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.ui.no>\n"
 "MIME-Version: 1.0\n"
@@ -59,9 +59,9 @@ msgid "Signal no.%d"
 msgstr "Signal nr. %d"
 
 #: lib/compression.c:34
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec '%s %s'"
-msgstr "%s: Klarte ikke kjøre gzip %s"
+msgstr "%s: Klarte ikke kjøre «%s %s»"
 
 #: lib/compression.c:62
 #, c-format
@@ -798,14 +798,14 @@ msgid "failed to read `%s' at line %d"
 msgstr "klarte ikke lese «%s» ved linje «%d»"
 
 #: lib/parsehelp.c:41
-#, fuzzy, c-format
+#, c-format
 msgid "warning, in file `%.255s' near line %d"
-msgstr "%s, i fila «%.255s» nær linje %d"
+msgstr "advarsel, i fila «%.255s» nær linje %d"
 
 #: lib/parsehelp.c:44
-#, fuzzy, c-format
+#, c-format
 msgid "parse error, in file `%.255s' near line %d"
-msgstr "%s, i fila «%.255s» nær linje %d"
+msgstr "tolkefeil, i fila «%.255s» nær linje %d"
 
 #: lib/parsehelp.c:48
 #, c-format
@@ -901,32 +901,28 @@ msgid "error setting permissions of `%.255s'"
 msgstr "feil ved setting av rettigheter for «%.255s»"
 
 #: src/archives.c:339
-#, fuzzy, c-format
+#, c-format
 msgid "failed to stat (dereference) existing symlink `%.250s'"
-msgstr "klarte ikke sette kjøretillatelse på «%.250s»"
+msgstr "klarte ikke (stat) finne informasjon om eksisterende symbolske lenke «%.250s»"
 
 #: src/archives.c:360
 #, c-format
 msgid ""
 "failed to stat (dereference) proposed new symlink target `%.250s' for "
 "symlink `%.250s'"
-msgstr ""
+msgstr "klarte ikke (stat) finne informasjon om foreslått nytt symlenke mål «%.250s» for symlenke «%.250s»"
 
 #: src/archives.c:411
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "trying to overwrite `%.250s', which is the diverted version of `"
 "%.250s' (package: %.100s)"
-msgstr ""
-"prøver å skrive over «%.250s», som er den omdirigerte versjonen av "
-"«%.250s»%.10s%.100s%.10s"
+msgstr "prøver å skrive over «%.250s», som er den omdirigerte versjonen av «%.250s» (pakke: %.100s)"
 
 #: src/archives.c:417
-#, fuzzy, c-format
+#, c-format
 msgid "trying to overwrite `%.250s', which is the diverted version of `%.250s'"
-msgstr ""
-"prøver å skrive over «%.250s», som er den omdirigerte versjonen av "
-"«%.250s»%.10s%.100s%.10s"
+msgstr "prøver å skrive over «%.250s», som er den omdirigerte versjonen av «%.250s»"
 
 #: src/archives.c:440
 #, c-format
@@ -1054,61 +1050,61 @@ msgid "unable to install new version of `%.255s'"
 msgstr "klarte ikke installere ny versjon av «%.255s»"
 
 #: src/archives.c:853
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - ignoring dependency problem with %s:\n"
 "%s"
 msgstr ""
-"dpkg: Advarsel - ignorerer kravproblem ved fjerning av %s:\n"
+"dpkg: Advarsel - ignorerer kravproblem med %s:\n"
 "%s"
 
 #: src/archives.c:860
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - considering deconfiguration of essential\n"
 " package %s, to enable %s.\n"
 msgstr ""
 "dpkg: Advarsel - vurderer fjerning av oppsett for den nødvendige\n"
-" pakken %s for å kunne fjerne %s.\n"
+" pakken %s, for å kunne aktivere %s.\n"
 
 #: src/archives.c:864
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: no, %s is essential, will not deconfigure\n"
 " it in order to enable %s.\n"
 msgstr ""
 "dpkg: Nei, %s er nødvendig. Vil ikke fjerne oppsettet\n"
-" for å kunne fjerne %s.\n"
+" for å kunne aktivere %s.\n"
 
 #: src/archives.c:878
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: no, cannot proceed with %s (--auto-deconfigure will help):\n"
 "%s"
 msgstr ""
-"dpkg: Nei, kan ikke fjerne %s (--auto-deconfigure kan hjelpe):\n"
+"dpkg: Nei, kan ikke fortsette med %s (--auto-deconfigure kan hjelpe):\n"
 "%s"
 
 #: src/archives.c:888
-#, fuzzy, c-format
+#, c-format
 msgid "removal of %.250s"
-msgstr "lesefeil i %.250s"
+msgstr "fjerning av %.250s"
 
 #: src/archives.c:915
-#, fuzzy, c-format
+#, c-format
 msgid "installation of %.250s"
-msgstr "klarte ikke installere ny versjon av «%.255s»"
+msgstr "installering av %.255s"
 
 #: src/archives.c:916
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: considering deconfiguration of %s, which would be broken by %s ...\n"
-msgstr "dpkg: Vurderer å fjerne %s til fordel for %s ...\n"
+msgstr "dpkg: Vurderer å fjerne oppsett for %s, som blir ødelagt av %s ...\n"
 
 #: src/archives.c:923
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: yes, will deconfigure %s (broken by %s).\n"
-msgstr "dpkg: Ja, fjerner %s til fordel for %s.\n"
+msgstr "dpkg: Ja, fjerner oppsett for %s (ødelagt av %s).\n"
 
 #: src/archives.c:927 src/archives.c:1048
 #, c-format
@@ -1120,9 +1116,9 @@ msgstr ""
 "%s"
 
 #: src/archives.c:935
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: warning - ignoring breakage, may proceed anyway !\n"
-msgstr "dpkg: Advarsel - ignorerer konflikt, men kan fortsette likevel.\n"
+msgstr "dpkg: Advarsel - ignorerer ødeleggelse, men kan fortsette likevel.\n"
 
 #: src/archives.c:941
 #, c-format
@@ -1130,11 +1126,13 @@ msgid ""
 "installing %.250s would break %.250s, and\n"
 " deconfiguration is not permitted (--auto-deconfigure might help)"
 msgstr ""
+"installering av %.250s vil ødelegge %.250s, og\n"
+" fjerning av oppsett er ikke tillatt (--auto-deconfigure kan hjelpe)"
 
 #: src/archives.c:945
 #, c-format
 msgid "installing %.250s would break existing software"
-msgstr ""
+msgstr "installering av %.250s vil ødelegge eksisterende programvare"
 
 #: src/archives.c:978
 #, c-format
@@ -1169,7 +1167,7 @@ msgstr ""
 #: src/archives.c:1034
 #, c-format
 msgid "package %s has too many Conflicts/Replaces pairs"
-msgstr ""
+msgstr "pakke %s har for mange konflikt/erstatt-par"
 
 #: src/archives.c:1040
 #, c-format
@@ -1618,39 +1616,39 @@ msgid "unable to check for existence of `%.250s'"
 msgstr "klarte ikke sjekke om «%.250s» finnes"
 
 #: src/depcon.c:156
-#, fuzzy, c-format
+#, c-format
 msgid "%s depends on %s"
-msgstr " krever "
+msgstr "%s krever %s"
 
 #: src/depcon.c:159
-#, fuzzy, c-format
+#, c-format
 msgid "%s pre-depends on %s"
-msgstr " før-krever "
+msgstr "%s før-krever %s"
 
 #: src/depcon.c:162
-#, fuzzy, c-format
+#, c-format
 msgid "%s recommends %s"
-msgstr " tilrår "
+msgstr "%s anbefaler %s "
 
 #: src/depcon.c:165
-#, fuzzy, c-format
+#, c-format
 msgid "%s suggests %s"
-msgstr " foreslår "
+msgstr "%s foreslår %s"
 
 #: src/depcon.c:168
-#, fuzzy, c-format
+#, c-format
 msgid "%s breaks %s"
-msgstr " avbryter"
+msgstr "%s ødelegger %s"
 
 #: src/depcon.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s conflicts with %s"
-msgstr " er i konflikt med "
+msgstr "%s er i konflikt med %s"
 
 #: src/depcon.c:174
-#, fuzzy, c-format
+#, c-format
 msgid "%s enhances %s"
-msgstr " forbedrer "
+msgstr "%s forbedrer %s"
 
 #: src/depcon.c:265
 #, c-format
@@ -2687,19 +2685,19 @@ msgid "  Package %s is not installed.\n"
 msgstr "Pakken %s er ikke installert.\n"
 
 #: src/packages.c:362
-#, fuzzy, c-format
+#, c-format
 msgid " %s (%s) breaks %s and is %s.\n"
-msgstr "  %.250s tilbyr %.250s og er %s.\n"
+msgstr " %s (%s) ødelegger %s og er %s.\n"
 
 #: src/packages.c:370
-#, fuzzy, c-format
+#, c-format
 msgid "  %s (%s) provides %s.\n"
-msgstr "%s (underprosess): %s\n"
+msgstr "  %s (%s) tilbyr %s.\n"
 
 #: src/packages.c:375
-#, fuzzy, c-format
+#, c-format
 msgid "  Version of %s to be configured is %s.\n"
-msgstr "  Versjon av %s på systemet er %s.\n"
+msgstr "  Versjonen av %s som skal settes opp er %s.\n"
 
 #: src/packages.c:467
 msgid " depends on "
@@ -2828,14 +2826,14 @@ msgid "error trying to open %.250s"
 msgstr "feil ved åpning av %.250s"
 
 #: src/processarc.c:405
-#, fuzzy, c-format
+#, c-format
 msgid "De-configuring %s, to allow removal of %s ...\n"
 msgstr "Fjerner oppsettet av %s, slik at %s kan fjernes ...\n"
 
 #: src/processarc.c:408
-#, fuzzy, c-format
+#, c-format
 msgid "De-configuring %s ...\n"
-msgstr "Fjerner %s ...\n"
+msgstr "Fjerner oppsettet av %s ...\n"
 
 #: src/processarc.c:479
 #, c-format
@@ -2884,13 +2882,11 @@ msgid "unable to stat other new file `%.250s'"
 msgstr "fant ikke annen ny fil «%.250s»"
 
 #: src/processarc.c:684
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - old file `%.250s' is the same as several new files!  (both `"
 "%.250s' and `%.250s')\n"
-msgstr ""
-"dpkg: Advarsel - den gamle oppsettsfila «%.250s» er den samme som flere nye "
-"filer! (Både «%.250s» og «%.250s».)"
+msgstr "dpkg: Advarsel - den gamle fila «%.250s» er den samme som flere nye filer! (Både «%.250s» og «%.250s».)\n"
 
 #: src/processarc.c:725
 #, c-format
@@ -2988,24 +2984,24 @@ msgid "No packages found matching %s.\n"
 msgstr "Fant ingen pakker som passer til «%s».\n"
 
 #: src/query.c:254
-#, fuzzy, c-format
+#, c-format
 msgid "diversion by %s from: %s\n"
-msgstr "omdirigert av %s til:%s\n"
+msgstr "omdirigert av %s fra: %s\n"
 
 #: src/query.c:256
-#, fuzzy, c-format
+#, c-format
 msgid "diversion by %s to: %s\n"
-msgstr "omdirigert av %s til:%s\n"
+msgstr "omdirigert av %s til: %s\n"
 
 #: src/query.c:259
-#, fuzzy, c-format
+#, c-format
 msgid "local diversion from: %s\n"
-msgstr "lokal omdirigering"
+msgstr "lokal omdirigering fra: %s\n"
 
 #: src/query.c:260
-#, fuzzy, c-format
+#, c-format
 msgid "local diversion to: %s\n"
-msgstr "lokalt omdirigert: %s\n"
+msgstr "lokalt omdirigert til: %s\n"
 
 #: src/query.c:285
 msgid "--search needs at least one file name pattern argument"
@@ -3354,7 +3350,7 @@ msgstr "dpkg-deb - feil: %s («%s») inneholder ingen sifre\n"
 #: dpkg-deb/build.c:131
 #, c-format
 msgid "file name '%.50s...' is too long"
-msgstr ""
+msgstr "filnavn «%.50s...» er for langt"
 
 #: dpkg-deb/build.c:192
 msgid "--build needs a directory argument"
@@ -3797,9 +3793,9 @@ msgid "failed to exec rm -rf"
 msgstr "klarte ikke kjøre «rm -rf»"
 
 #: dpkg-deb/info.c:99
-#, fuzzy, c-format
+#, c-format
 msgid "realloc failed (%lu bytes)"
-msgstr "nytildeling mislyktes (%ld byte)"
+msgstr "nytildeling mislyktes (%lu byte)"
 
 #: dpkg-deb/info.c:108
 msgid "info_spew"
@@ -3925,7 +3921,7 @@ msgstr ""
 "\n"
 
 #: dpkg-deb/main.c:85
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Options:\n"
 "  --showformat=<format>            Use alternative format for --show.\n"
@@ -3945,10 +3941,9 @@ msgstr ""
 "  -D                         Vis avlusingsdata.\n"
 "  --old, --new               Velg arkivformat.\n"
 "  --nocheck                  Ikke sjekk kontrollfil (bygg ugyldig pakke).\n"
-"  -z#                             For å velge komprimering ved bygging.\n"
-"  -Z<type>                   Setter komprimeringstypen som skal brukes ved "
-"bygging.\n"
-"                             Tillatte verdier: gzip, bzip2, ingen\n"
+"  -z#                        For å velge komprimering ved bygging.\n"
+"  -Z<type>                   Setter komprimeringstypen som skal brukes ved bygging.\n"
+"                             Tillatte verdier: gzip, bzip2, lzma, ingen.\n"
 "\n"
 
 #: dpkg-deb/main.c:106
@@ -4534,9 +4529,9 @@ msgstr ""
 
 #: scripts/dpkg-divert.pl:74 scripts/dpkg-statoverride.pl:56
 #: scripts/update-alternatives.pl:229
-#, fuzzy, perl-format
+#, perl-format
 msgid "two commands specified: %s and --%s"
-msgstr "to modi oppgitt: %s og --%s"
+msgstr "to kommandoer oppgitt: %s og --%s"
 
 #: scripts/dpkg-divert.pl:107
 #, perl-format
@@ -5095,7 +5090,7 @@ msgstr ""
 "Opphavsrett (C) 2000-2002 Wichert Akkerman."
 
 #: scripts/update-alternatives.pl:74
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "Usage: %s [<option> ...] <command>\n"
 "\n"
@@ -5150,29 +5145,27 @@ msgstr ""
 "  --set <navn> <sti>      sett <sti> som alternativ for <navn>.\n"
 "  --all                    kall --config på alle alternativer.\n"
 "\n"
-"<lenke> er den symbolske lenka som peker til /etc/alternatives/<navn>.\n"
+"<lenke> er den symbolske lenka som peker til %s/<navn>.\n"
 "  (f.eks. /usr/bin/pager)\n"
 "<navn> er hovednavnet for denne lenkegruppa.\n"
 "  (f.eks. pager)\n"
 "<sti> er plasseringen av en av de alternative målfilene.\n"
 "  (f.eks. /usr/bin/less)\n"
-"<prioritet> er et heltall; opsjoner med høyere nummer har høyere prioritet "
-"i\n"
+"<prioritet> er et heltall; opsjoner med høyere nummer har høyere prioritet i\n"
 "  automatisk modus.\n"
 "\n"
 "Opsjoner:\n"
 "  --altdir <katalog>     endre katalogen for alternativer.\n"
 "  --admindir <katalog>   endre den administrative katalogen.\n"
-"  --test                   aktiverer testmodus (ingen handlinger utføres).\n"
-"  --debug                  aktiverer avlusingsmodus (viser mer "
-"informasjon).\n"
-"  --quiet                  ikke vis meldinger på standard-ut.\n"
-"  --help                   vis denne hjelpmeldingen.\n"
-"  --version                vis versjonen.\n"
+"  --test                 aktiverer testmodus (ingen handlinger utføres).\n"
+"  --verbose              verbal operasjon, mye utskrift.\n"
+"  --quiet                stille operasjon, minimalt med utskrift.\n"
+"  --help                 vis denne hjelpmeldingen.\n"
+"  --version              vis versjonen.\n"
 
 #: scripts/update-alternatives.pl:127
 msgid "invalid update mode"
-msgstr ""
+msgstr "ugyldig oppdateringsmodus"
 
 #: scripts/update-alternatives.pl:131
 #, perl-format
@@ -5461,13 +5454,13 @@ msgstr ""
 "%s eller ikke-eksisterende; likevel feilet lesing av lenke: %s"
 
 #: scripts/update-alternatives.pl:634
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "There is no program which provides %s.\n"
 "Nothing to configure.\n"
 msgstr ""
-"Det er bare et program som tilbyr %s\n"
-"(%s). Det er ingenting å konfigurere.\n"
+"Det er ingen program som tilbyr %s, og\n"
+"dermed ingenting å sette opp.\n"
 
 #: scripts/update-alternatives.pl:640
 #, perl-format
