--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-29  Hans Fredrik Nordhaug  <hans@nordhaug.priv.no>
+
+	* nb.po: Updated to 930t.
+
 2007-12-22  Christian Perrier  <bubulle@debian.org>
 
 	* fr.po: Updated to 930t.
