Remove disabled, obsolete and quite incomplete Hebrew translations

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ dpkg (1.14.15) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
   * Move compression related variables to a new Dpkg::Compression module.
+  * Remove disabled, obsolete and quite incomplete Hebrew translations.
 
   [ Updated dpkg translations ]
   * Norwegian Bokmål (Hans Fredrik Nordhaug). Closes: #457918
