--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-29  Guillem Jover  <guillem@debian.org>
+
+	* he.po: Remove obsolete translation.
+	* LINGUAS: Remove disabled Hebrew entry.
+
 2007-11-09  Miroslav Kure  <kurem@debian.cz>
 
 	* cs.po: Updated to 285t.
