Revert 9e09d9f0f8b57d61c8970a2d554add1714afb8d7
The dpkg-dev dependecy bump on dpkg is not needed anymore as the
compression variables are located in a new module provided by dpkg-dev.

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ dpkg (1.14.15) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Move compression related variables to a new Dpkg::Compression module.
   * Remove disabled, obsolete and quite incomplete Hebrew translations.
+  * Revert dpkg-dev versioned dependency bump on dpkg >= 1.14.13 back to
+    >= 1.14.6, as the compression variables are now in a module in dpkg-dev.
 
   [ Updated dpkg translations ]
   * Norwegian Bokmål (Hans Fredrik Nordhaug). Closes: #457918
