--- a/ChangeLog
+++ b/ChangeLog
@@ -25,6 +25,11 @@
 
 2007-12-28  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/Dpkg/ErrorHandling.pm (syntaxerr): New function to
+	replace the syntax() function in controllib.pl.
+
+2007-12-28  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/Dpkg.pm: Add a warning to avoid adding unnecessary stuff
 	in that module.
 
