Add non-regression tests for Dpkg::Control and Dpkg::Cdata

--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,9 @@
 
 	* scripts/Dpkg/Cdata.pm, scripts/Dpkg/Control.pm: Add two new
 	module to parse and manipulate files like debian/control.
+	* scripts/t/600_Dpkg_Control.t,
+	scripts/t/600_Dpkg_Control/control-1: Add non-regression tests for
+	Dpkg::Control and Dpkg::Cdata.
 
 2007-12-28  Raphael Hertzog  <hertzog@debian.org>
 
