Fix some typos in various manpages.

--- a/man/dpkg-gensymbols.1
+++ b/man/dpkg-gensymbols.1
@@ -108,7 +108,7 @@ Define the package version. Defaults to the version extracted from
 debian/changelog. Required if called outside of a source package tree.
 .TP
 .BI \-e library-file
-Only analyze libraries explicitely listed instead of finding all public
+Only analyze libraries explicitly listed instead of finding all public
 libraries. You can use a regular expression in \fIlibrary-file\fR to match
 multiple libraries with a single argument (otherwise you need multiple
 \fB\-e\fR).
@@ -136,7 +136,7 @@ disappeared. Level 2 fails if some new symbols have been introduced.
 Level 3 fails if some libraries have disappeared. Level 4 fails if some
 libraries have been introduced.
 
-This value can be overriden by the environment variable
+This value can be overridden by the environment variable
 DPKG_GENSYMBOLS_CHECK_LEVEL.
 .TP
 .BI \-d
