--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-30  A. Costa  <agcosta@gis.net>
+
+	* dpkg-gensymbols.1, dpkg-shlibdeps.1, dpkg-source.1, deb-symbols.5:
+	Fix some typos.
+
 2007-12-29  Guillem Jover  <guillem@debian.org>
 
 	* po/sv.po: Merged with dpkg-man.pot.
