--- a/man/deb-symbols.5
+++ b/man/deb-symbols.5
@@ -19,13 +19,13 @@ in these files is:
 [ * <field-name>: <field value> ]
 .br
 [ ... ]
- <symbol> <mininal version>[ <id of dependency template> ]
+ <symbol> <minimal version>[ <id of dependency template> ]
 .P
 The \fIlibrary soname\fR is exactly the value of the SONAME field
 as exported by \fBobjdump\fR(1). A \fIdependency template\fR is a
 dependency where \fI#MINVER#\fR is dynamically replaced either by
 a version check like "(>= \fIminimal version\fR)" or by nothing (if
-an unversionned dependency is deemed sufficient). 
+an unversioned dependency is deemed sufficient). 
 .P
 Each exported \fIsymbol\fR (listed as \fIname\fR@\fIversion\fR, with
 \fIversion\fR being "Base" if the library is not versioned) is associated
