Fix typos in translations to avoid fuzzy strings.

--- a/man/po/es.po
+++ b/man/po/es.po
@@ -7468,7 +7468,7 @@ msgstr ""
 #: ../../man/dpkg-shlibdeps.1:64 ../../man/dpkg-shlibdeps.1:95
 #, fuzzy
 msgid ""
-"Package-provided shared library dependency information.  Unless overriden, "
+"Package-provided shared library dependency information.  Unless overridden, "
 "I<admindir> is /var/lib/dpkg."
 msgstr ""
 "Información acerca de redefinición de dependencias de bibliotecas "
@@ -8140,7 +8140,7 @@ msgid ""
 "cvsignore, .svn/). The default regexp is already very exhaustive, but if you "
 "need to replace it, please note that by default it can match any part of a "
 "path, so if you want to match the begin of a filename or only full "
-"filenames, you will need to provide the neccessary anchors (e.g. '(^|/)', "
+"filenames, you will need to provide the necessary anchors (e.g. '(^|/)', "
 "'($|/)') yourself."
 msgstr ""
 
