Update all scripts to use Dpkg::Substvars, Dpkg::Cdata, Dpkg::Control and Dpkg::Fields::Object

--- a/ChangeLog
+++ b/ChangeLog
@@ -30,6 +30,11 @@
 	* scripts/t/600_Dpkg_Control.t,
 	scripts/t/600_Dpkg_Control/control-1: Add non-regression tests for
 	Dpkg::Control and Dpkg::Cdata.
+	* scripts/dpkg-checkbuilddeps.pl, scripts/dpkg-genchanges.pl,
+	scripts/dpkg-gencontrol.pl, scripts/dpkg-gensymbols.pl,
+	scripts/dpkg-shlibdeps.pl, scripts/dpkg-source.pl: Update scripts
+	to use the new modules Dpkg::Cdata, Dpkg::Control,
+	Dpkg::Fields::Object and Dpkg::Substvars.
 
 2007-12-28  Raphael Hertzog  <hertzog@debian.org>
 
