dselect: Do not disaplay garbage on monochrome terminals
Set a missing ncurses character attribute. Closes: #155741, #157093

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,9 @@ dpkg (1.14.15) UNRELEASED; urgency=low
   * Remove disabled, obsolete and quite incomplete Hebrew translations.
   * Revert dpkg-dev versioned dependency bump on dpkg >= 1.14.13 back to
     >= 1.14.6, as the compression variables are now in a module in dpkg-dev.
+  * Do not disaplay garbage in dselect on monochrome terminals, by setting
+    a missing ncurses character attribute. Closes: #155741, #157093
+    Thanks to Sven Rudolph.
 
   [ Updated dpkg translations ]
   * Norwegian Bokmål (Hans Fredrik Nordhaug). Closes: #457918
