--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-01  Sven Rudolph  <sr1@loom.sax.de>
+
+	* dselect/baselist.cc (baselist::startdisplay): Set helpscreen_attr
+	on monochrome terminals.
+
 2007-12-28  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg.pm: Add a warning to avoid adding unnecessary stuff
