install-info: Ignore wrapped lines when matching section titles
Closes: #214684

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-01  Ian Zimmerman  <itz@buug.org>
+
+	* scripts/install-info.pl: Ignore wrapped lines when matching
+	section titles.
+
 2008-01-01  John Zaitseff  <J.Zaitseff@zap.org.au>
 
 	* dselect/baselist.cc (baselist::wordwrapinfo): Stop processing when
