--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,9 @@ dpkg (1.14.15) UNRELEASED; urgency=low
   * Do not loop endlessly in dselect with very long package descriptions.
     Closes: #179320, #342495
     Thanks to John Zaitseff.
+  * Ignore wrapped lines in install-info when matching section titles.
+    Closes: #214684
+    Thanks to Andreas Metzler and Ian Zimmerman.
 
   [ Updated dpkg translations ]
   * Norwegian Bokmål (Hans Fredrik Nordhaug). Closes: #457918
