Do not use strdup for execvp arguments
Closes: #379027

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-01  Guillem Jover  <guillem@debian.org>
+
+	* src/archives.c (archivefiles): Remove pointless strdup for execvp
+	arguments.
+
 2008-01-01  Ian Zimmerman  <itz@buug.org>
 
 	* scripts/install-info.pl: Ignore wrapped lines when matching
