Dpkg::Version: Add check_version to replace controllib's checkversion
* scripts/Dpkg/Version.pm (check_version): New function.
* scripts/dpkg-buildpackage.pl: Use the new check_version.
* scripts/dpkg-source.pl: Likewise.

--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,11 @@
 	to use the new modules Dpkg::Cdata, Dpkg::Control,
 	Dpkg::Fields::Object and Dpkg::Substvars.
 
+	* scripts/Dpkg/Version.pm (check_version): New function replacing
+	checkversion of controllib.pl.
+	* scripts/dpkg-source.pl, scripts/dpkg-buildpackage.pl: Use the
+	new check_version.
+
 2007-12-28  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/ErrorHandling.pm (syntaxerr): New function to
