Dpkg::Vars: New module handling the global variable $sourcepackage
* scripts/Dpkg/Vars.pm: New module exporting $sourcepackage and
set_source_package to replace the $sourcepackage and setsourcepackage of
controllib.pl.
* scripts/dpkg-genchanges.pl: Updated to use Dpkg::Vars.
* scripts/dpkg-gencontrol.pl: Likewise.
* scripts/dpkg-source.pl: Likewise.

--- a/ChangeLog
+++ b/ChangeLog
@@ -41,6 +41,12 @@
 	* scripts/dpkg-source.pl, scripts/dpkg-buildpackage.pl: Use the
 	new check_version.
 
+	* scripts/Dpkg/Vars.pm (set_source_package): New function to set
+	and check the global variable $sourcepackage (replacing
+	controllib's setsourcepackage).
+	* scripts/dpkg-genchanges.pl, scripts/dpkg-gencontrol.pl,
+	scripts/dpkg-source.pl: Use the new set_source_package.
+
 2007-12-28  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/ErrorHandling.pm (syntaxerr): New function to
