dpkg-source: Integrate readmd5sum from controllib

--- a/ChangeLog
+++ b/ChangeLog
@@ -52,6 +52,9 @@
 	anything useful anymore as it got dropped from several other
 	scripts over the years without problems.
 
+	* scripts/dpkg-source.pl: Integrate readmd5sum from controllib here
+	as it's the only user of that function.
+
 2007-12-28  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/ErrorHandling.pm (syntaxerr): New function to
