Update list of files to include in the distribution tarball

--- a/ChangeLog
+++ b/ChangeLog
@@ -59,6 +59,9 @@
 	parsechangelog and its dependencies (parsecdata, syntax) that are
 	still needed.
 
+	* scripts/Makefile.am: Include all the new files in the
+	distributed tarball.
+
 2007-12-28  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/ErrorHandling.pm (syntaxerr): New function to
