dpkg-buildpackage: Fix build message for non-gz compressed sources
Closes: #458519

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,8 @@ dpkg (1.14.15) UNRELEASED; urgency=low
   * Do not print 'failed to kill' warning in start-stop-daemon when polling
     the pid. Closes: #157305, #352554
     Thanks to Samuel Thibault.
+  * Properly print build message in dpkg-buildpackage for lzma and bzip2
+    compressed sources. Closes: #458519
 
   [ Updated dpkg translations ]
   * Norwegian Bokmål (Hans Fredrik Nordhaug). Closes: #457918
