--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,7 @@ dpkg (1.14.15) UNRELEASED; urgency=low
     Thanks to Samuel Thibault.
   * Properly print build message in dpkg-buildpackage for lzma and bzip2
     compressed sources. Closes: #458519
+  * Promote bzip2 Recommends to Depends for dpkg-dev. Closes: #458521
 
   [ Updated dpkg translations ]
   * Norwegian Bokmål (Hans Fredrik Nordhaug). Closes: #457918
