Add a 'struct stat' forward declaration to fix a compilation warning

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-01-02  Guillem Jover  <guillem@debian.org>
 
+	* src/main.h (struct stat): New forward declaration.
+
+2008-01-02  Guillem Jover  <guillem@debian.org>
+
 	* lib/dpkg.h (warningf): Add PRINTFFORMAT attribute.
 	(buffer_copy_setup_PtrInt): Likewise.
 	(buffer_copy_setup_PtrPtr): Likewise.
