--- a/debian/changelog
+++ b/debian/changelog
@@ -31,7 +31,7 @@ dpkg (1.14.15) UNRELEASED; urgency=low
   * Add lzma to dpkg-dev Depends.
 
   [ Updated dpkg translations ]
-  * Norwegian Bokmål (Hans Fredrik Nordhaug). Closes: #457918
+  * Norwegian Bokmål (Hans Fredrik Nordhaug). Closes: #457918, #458732
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson).
