French translation update for scripts

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-02  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Updated to 482t and converted to UTF-8.
+
 2007-12-29  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-dev.pot: Regenerated.
