--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,9 @@ dpkg (1.14.15) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Norwegian Bokmål (Hans Fredrik Nordhaug). Closes: #457918, #458732
 
+  [ Updated scripts translations ]
+  * French (Christian Perrier).
+
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson).
 
