Convert to UTF-8

--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-02  Christian Perrier  <bubulle@debian.org>
+
+	* po/fr.po: converted to UTF-8
+
 2007-12-30  Raphael Hertzog <hertzog@debian.org>
 
 	* po/*.po: Fix typos in translations as well to avoid fuzzy
