--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,6 +1,6 @@
 2008-01-02  Christian Perrier  <bubulle@debian.org>
 
-	* po/fr.po: converted to UTF-8
+	* po/fr.po: converted to UTF-8. Updated to 1171t139f74u
 
 2007-12-30  Raphael Hertzog <hertzog@debian.org>
 
