dpkg-shlibdeps: also search libs in package build trees containing symbols files
* scripts/dpkg-shlibdeps.pl (my_find_library): When defining the
list of package build trees to scan, also consider those that
contain symbols files (instead of only considering those that have
a shlibs file).
* man/dpkg-shlibdeps.1: Document the change listed above.

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,11 @@
 	trees are scanned first and thus if they contain a needed library
 	dpkg-shlibdeps will find the library there and not in an installed
 	package).
+	* scripts/dpkg-shlibdeps.pl (my_find_library): When defining the
+	list of package build trees to scan, also consider those that
+	contain symbols files (instead of only considering those that have
+	a shlibs file).
+	* man/dpkg-shlibdeps.1: Document the change listed above.
 
 2008-01-03  Guillem Jover  <guillem@debian.org>
 
