--- a/debian/changelog
+++ b/debian/changelog
@@ -38,6 +38,7 @@ dpkg (1.14.15) UNRELEASED; urgency=low
 
   [ Updated dpkg translations ]
   * Norwegian Bokmål (Hans Fredrik Nordhaug). Closes: #457918, #458732
+  * Vietnamese (Clytie Siddall). Closes: #459016
 
   [ Updated scripts translations ]
   * French (Christian Perrier).
