--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-04  Clytie Siddall  <clytie@riverland.net.au>
+
+	* vi.po: Updated to 928t.
+
 2008-01-02  Hans Fredrik Nordhaug  <hans@nordhaug.priv.no>
 
 	* nb.po: Updated to 928t.
