--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,7 @@ dpkg (1.14.15) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Norwegian Bokmål (Hans Fredrik Nordhaug). Closes: #457918, #458732
   * Vietnamese (Clytie Siddall). Closes: #459016
+  * French (Christian Perrier).
 
   [ Updated scripts translations ]
   * French (Christian Perrier).
