--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-04  Christian Perrier  <bubulle@debian.org>
+
+	* fr.po: Updated to 928t.
+
 2008-01-04  Clytie Siddall  <clytie@riverland.net.au>
 
 	* vi.po: Updated to 928t.
