Document what changed on complete PO files with the last rebuild of the POT file

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -13,7 +13,8 @@
 2007-12-29  Guillem Jover  <guillem@debian.org>
 
 	* dpkg.pot: Regenerated.
-	* *.po: Merged with dpkg.pot.
+	* *.po: Merged with dpkg.pot. Formerly complete translations
+	  turned to 926t2f
 
 2007-12-29  Guillem Jover  <guillem@debian.org>
 
