Simplified Chinese translation update. Closes: #459018

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2008-01-04  Christian Perrier  <bubulle@debian.org>
 
+	* zh_CN.po: Updated to 928t.
+
+2008-01-04  Christian Perrier  <bubulle@debian.org>
+
 	* fr.po: Updated to 928t.
 
 2008-01-04  Clytie Siddall  <clytie@riverland.net.au>
