--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -7,14 +7,15 @@
 # Ming Hua <minghua@rice.edu>, 2006.
 # Carlos Z.F. Liu <carlosliu@users.sourceforge.net>, 2004,2006.
 # Anthony Wong <ypwong@debian.org.hk>, 2007.
+# Deng Xiyue <manphiz-guest@users.alioth.debian.org>, 2007.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg 1.13\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2007-12-29 05:57+0100\n"
-"PO-Revision-Date: 2007-03-18 19:25+0800\n"
-"Last-Translator: Kov Chai <tchaikov@gmail.com>\n"
+"PO-Revision-Date: 2008-01-04 15:52+0800\n"
+"Last-Translator: Deng Xiyue <manphiz-guest@users.alioth.debian.org>\n"
 "Language-Team: Debian Chinese [GB] <debian-chinese-gb@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -42,7 +43,7 @@ msgstr "vsnprintf 无法 flush"
 
 #: lib/compat.c:53
 msgid "unable to stat in vsnprintf"
-msgstr "vsnprintf 无法 stat"
+msgstr "vsnprintf 无法统计"
 
 #: lib/compat.c:54
 msgid "unable to rewind in vsnprintf"
@@ -63,9 +64,9 @@ msgid "Signal no.%d"
 msgstr "信号 no.%d"
 
 #: lib/compression.c:34
-#, fuzzy, c-format
+#, c-format
 msgid "%s: failed to exec '%s %s'"
-msgstr "%s：exec gzip %s 失败"
+msgstr "%s：执行 ‘%s %s” 失败"
 
 #: lib/compression.c:62
 #, c-format
@@ -699,7 +700,7 @@ msgstr "无法打开软件包的 info 文件“%.255s”，以备读取"
 #: lib/parse.c:111
 #, c-format
 msgid "can't stat package info file `%.255s'"
-msgstr "无法 stat 软件包的 info 文件“%.255s”"
+msgstr "无法统计软件包的 info 文件“%.255s”"
 
 #: lib/parse.c:116
 #, c-format
@@ -796,14 +797,14 @@ msgid "failed to read `%s' at line %d"
 msgstr "无法读取“%s”文件的第“%d”行"
 
 #: lib/parsehelp.c:41
-#, fuzzy, c-format
+#, c-format
 msgid "warning, in file `%.255s' near line %d"
-msgstr "%s，在“%s”文件的第“%d”行附近"
+msgstr "警告，在“%.255s”文件的第“%d”行附近"
 
 #: lib/parsehelp.c:44
-#, fuzzy, c-format
+#, c-format
 msgid "parse error, in file `%.255s' near line %d"
-msgstr "%s，在“%s”文件的第“%d”行附近"
+msgstr "语法分析错误，在“%.255s”文件的第“%d”行附近"
 
 #: lib/parsehelp.c:48
 #, c-format
@@ -899,32 +900,28 @@ msgid "error setting permissions of `%.255s'"
 msgstr "为“%.255s”设置权限位时出错"
 
 #: src/archives.c:339
-#, fuzzy, c-format
+#, c-format
 msgid "failed to stat (dereference) existing symlink `%.250s'"
-msgstr "无法设置 %s 的执行权限位(execute permissions)"
+msgstr "统计(反引用)现有的符号链接“%.250s”失败"
 
 #: src/archives.c:360
 #, c-format
 msgid ""
 "failed to stat (dereference) proposed new symlink target `%.250s' for "
 "symlink `%.250s'"
-msgstr ""
+msgstr "统计(反引用)建议的新符号链接“%.250s”以替代符号链接“%.250s”失败"
 
 #: src/archives.c:411
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "trying to overwrite `%.250s', which is the diverted version of `"
 "%.250s' (package: %.100s)"
-msgstr ""
-"正在尝试覆盖“%.250s”，该文件是文件“%.250s”的转移版本(diverted version) %.10s"
-"%.100s%.10s"
+msgstr "正在尝试覆盖“%.250s”，其为“%.250s”的转移版本(软件包：%.100s)"
 
 #: src/archives.c:417
-#, fuzzy, c-format
+#, c-format
 msgid "trying to overwrite `%.250s', which is the diverted version of `%.250s'"
-msgstr ""
-"正在尝试覆盖“%.250s”，该文件是文件“%.250s”的转移版本(diverted version) %.10s"
-"%.100s%.10s"
+msgstr "正在尝试覆盖“%.250s”，其为“%.250s”的转移版本"
 
 #: src/archives.c:440
 #, c-format
@@ -1045,59 +1042,61 @@ msgid "unable to install new version of `%.255s'"
 msgstr "无法安装“%.255s”的新版本"
 
 #: src/archives.c:853
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - ignoring dependency problem with %s:\n"
 "%s"
 msgstr ""
-"dpkg: 警告 - 忽视依赖关系的问题将会把 %s 删除：\n"
+"dpkg: 警告 - 忽视 %s 的依赖关系问题：\n"
 "%s"
 
 #: src/archives.c:860
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - considering deconfiguration of essential\n"
 " package %s, to enable %s.\n"
-msgstr "dpkg: 警告 - 为了能删除 %2$s，正准备抹去重要软件包 %1$s 的设置。\n"
+msgstr ""
+"dpkg: 警告 - 正在考虑反配置基础\n"
+" 软件包 %s，以开启 %s。\n"
 
 #: src/archives.c:864
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: no, %s is essential, will not deconfigure\n"
 " it in order to enable %s.\n"
 msgstr ""
-"dpkg：不行，%s 是重要的软件包，它的配置信息\n"
-"将不会被抹去，只因要让 %s 得以删除。\n"
+"dpkg：不行，%s 是基础软件包，它不能被反配置\n"
+" 以开启 %s。\n"
 
 #: src/archives.c:878
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: no, cannot proceed with %s (--auto-deconfigure will help):\n"
 "%s"
 msgstr ""
-"dpkg：不行，不能删除 %s (不妨试一下 --auto-deconfigure)：\n"
+"dpkg：不行，不能继续进行 %s (不妨试一下 --auto-deconfigure)：\n"
 "%s"
 
 #: src/archives.c:888
-#, fuzzy, c-format
+#, c-format
 msgid "removal of %.250s"
-msgstr "在 %.250s 中发生读错误"
+msgstr "删除 %.250s"
 
 #: src/archives.c:915
-#, fuzzy, c-format
+#, c-format
 msgid "installation of %.250s"
-msgstr "软件包安装脚本"
+msgstr "安装 %.250s"
 
 #: src/archives.c:916
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: considering deconfiguration of %s, which would be broken by %s ...\n"
-msgstr "dpkg：为了 %2$s，正准备删除%1$s ...\n"
+msgstr "dpkg：正在考虑反配置 %s ，否则会被 %s 破坏 ...\n"
 
 #: src/archives.c:923
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: yes, will deconfigure %s (broken by %s).\n"
-msgstr "dpkg：好的，为了 %2$s 我将删除 %1$s。\n"
+msgstr "dpkg：好的，将要反配置 %s (被 %s 破坏)。\n"
 
 #: src/archives.c:927 src/archives.c:1048
 #, c-format
@@ -1109,9 +1108,9 @@ msgstr ""
 "%3$s"
 
 #: src/archives.c:935
-#, fuzzy, c-format
+#, c-format
 msgid "dpkg: warning - ignoring breakage, may proceed anyway !\n"
-msgstr "dpkg：警告 - 忽视了软件包间的冲突，无论怎样，继续安装！\n"
+msgstr "dpkg：警告 - 忽视了软件包间的破坏，无论怎样，继续安装！\n"
 
 #: src/archives.c:941
 #, c-format
@@ -1119,11 +1118,13 @@ msgid ""
 "installing %.250s would break %.250s, and\n"
 " deconfiguration is not permitted (--auto-deconfigure might help)"
 msgstr ""
+"安装 %.250s 将破坏 %.250s，并且\n"
+"不允许反配置(--auto-deconfigure 也许会有帮助)"
 
 #: src/archives.c:945
 #, c-format
 msgid "installing %.250s would break existing software"
-msgstr ""
+msgstr "安装 %.250s 将破坏现有软件"
 
 #: src/archives.c:978
 #, c-format
@@ -1157,7 +1158,7 @@ msgstr "dpkg：软件包 %s 需要重新安装，它将不会被删除。\n"
 #: src/archives.c:1034
 #, c-format
 msgid "package %s has too many Conflicts/Replaces pairs"
-msgstr ""
+msgstr "软件包 %s 有太多的冲突/替换组合"
 
 #: src/archives.c:1040
 #, c-format
@@ -1593,39 +1594,39 @@ msgid "unable to check for existence of `%.250s'"
 msgstr "无法检查“%.250s”是否存在"
 
 #: src/depcon.c:156
-#, fuzzy, c-format
+#, c-format
 msgid "%s depends on %s"
-msgstr " 依赖于 "
+msgstr "%s 依赖于 %s"
 
 #: src/depcon.c:159
-#, fuzzy, c-format
+#, c-format
 msgid "%s pre-depends on %s"
-msgstr " 预依赖于 "
+msgstr "%s 预依赖于 %s"
 
 #: src/depcon.c:162
-#, fuzzy, c-format
+#, c-format
 msgid "%s recommends %s"
-msgstr " 推荐 "
+msgstr "%s 推荐 %s"
 
 #: src/depcon.c:165
-#, fuzzy, c-format
+#, c-format
 msgid "%s suggests %s"
-msgstr " 建议 "
+msgstr "%s 建议 %s"
 
 #: src/depcon.c:168
-#, fuzzy, c-format
+#, c-format
 msgid "%s breaks %s"
-msgstr " 破坏了 "
+msgstr "%s 破坏了 %s"
 
 #: src/depcon.c:171
-#, fuzzy, c-format
+#, c-format
 msgid "%s conflicts with %s"
-msgstr " 冲突于 "
+msgstr "%s 冲突于 %s"
 
 #: src/depcon.c:174
-#, fuzzy, c-format
+#, c-format
 msgid "%s enhances %s"
-msgstr " 强化 "
+msgstr "%s 强化 %s"
 
 #: src/depcon.c:265
 #, c-format
@@ -2635,19 +2636,19 @@ msgid "  Package %s is not installed.\n"
 msgstr "  未曾安装软件包“%s”。\n"
 
 #: src/packages.c:362
-#, fuzzy, c-format
+#, c-format
 msgid " %s (%s) breaks %s and is %s.\n"
-msgstr "  %.250s 提供了 %.250s，它现在 %s。\n"
+msgstr "%s (%s)破坏 %s 并且 %s。\n"
 
 #: src/packages.c:370
-#, fuzzy, c-format
+#, c-format
 msgid "  %s (%s) provides %s.\n"
-msgstr "%s (子进程)：%s\n"
+msgstr "%s (%s)提供 %s。\n"
 
 #: src/packages.c:375
-#, fuzzy, c-format
+#, c-format
 msgid "  Version of %s to be configured is %s.\n"
-msgstr "系统中 %s 的版本为 %s。\n"
+msgstr "将被配置的 %s 的版本为 %s。\n"
 
 #: src/packages.c:467
 msgid " depends on "
@@ -2776,14 +2777,14 @@ msgid "error trying to open %.250s"
 msgstr "当试图打开 %.250s 时发生错误"
 
 #: src/processarc.c:405
-#, fuzzy, c-format
+#, c-format
 msgid "De-configuring %s, to allow removal of %s ...\n"
-msgstr "正在抹去 %s 的设置信息，只有这样我们才能删除 %s ...\n"
+msgstr "正在反配置 %s ，以允许删除 %s ...\n"
 
 #: src/processarc.c:408
-#, fuzzy, c-format
+#, c-format
 msgid "De-configuring %s ...\n"
-msgstr "正在删除 %s ...\n"
+msgstr "正在反配置 %s ...\n"
 
 #: src/processarc.c:479
 #, c-format
@@ -2829,12 +2830,11 @@ msgid "unable to stat other new file `%.250s'"
 msgstr "无法 stat 其它新文件“%.250s”"
 
 #: src/processarc.c:684
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "dpkg: warning - old file `%.250s' is the same as several new files!  (both `"
 "%.250s' and `%.250s')\n"
-msgstr ""
-"dpkg：警告 - 原有文件“%.250s”与多个新文件相同！(都是“%.250s”和“%.250s”)"
+msgstr "dpkg：警告 - 旧文件“%.250s”与多个新文件相同！(“%.250s”和“%.250s”)\n"
 
 #: src/processarc.c:725
 #, c-format
@@ -2929,24 +2929,24 @@ msgid "No packages found matching %s.\n"
 msgstr "没有找到与 %s 相匹配的软件包。\n"
 
 #: src/query.c:254
-#, fuzzy, c-format
+#, c-format
 msgid "diversion by %s from: %s\n"
-msgstr "被 %s 转移到了：%s\n"
+msgstr "%s 导致转移自：%s\n"
 
 #: src/query.c:256
-#, fuzzy, c-format
+#, c-format
 msgid "diversion by %s to: %s\n"
-msgstr "被 %s 转移到了：%s\n"
+msgstr "%s 导致转移至：%s\n"
 
 #: src/query.c:259
-#, fuzzy, c-format
+#, c-format
 msgid "local diversion from: %s\n"
-msgstr "本地转移项(local diversion)"
+msgstr "本地转移自：%s\n"
 
 #: src/query.c:260
-#, fuzzy, c-format
+#, c-format
 msgid "local diversion to: %s\n"
-msgstr "本地转移(locally diverted)到：%s\n"
+msgstr "本地转移至：%s\n"
 
 #: src/query.c:285
 msgid "--search needs at least one file name pattern argument"
@@ -3286,7 +3286,7 @@ msgstr "dpkg-deb - 错误：%s (“%s”) 未含有任何数字\n"
 #: dpkg-deb/build.c:131
 #, c-format
 msgid "file name '%.50s...' is too long"
-msgstr ""
+msgstr "文件名“%.50s...”太长了"
 
 #: dpkg-deb/build.c:192
 msgid "--build needs a directory argument"
@@ -3721,9 +3721,9 @@ msgid "failed to exec rm -rf"
 msgstr "exec rm -rf 失败"
 
 #: dpkg-deb/info.c:99
-#, fuzzy, c-format
+#, c-format
 msgid "realloc failed (%lu bytes)"
-msgstr "realloc 失败(%ld 字节)"
+msgstr "realloc 失败(%lu 字节)"
 
 #: dpkg-deb/info.c:108
 msgid "info_spew"
@@ -3848,7 +3848,7 @@ msgstr ""
 "\n"
 
 #: dpkg-deb/main.c:85
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "Options:\n"
 "  --showformat=<format>            Use alternative format for --show.\n"
@@ -3864,14 +3864,13 @@ msgid ""
 "\n"
 msgstr ""
 "选项：\n"
-"  --showformat=<格式>        令 --show 使用替代格式输出.\n"
+"  --showformat=<格式>        用于 --show 的替代格式输出.\n"
 "  -D                         开启调试信息的输出.\n"
-"  --old，--new               选择包文件的格式.\n"
-"  --nocheck                  关闭对主控文件的检查(可能导致生成不能使用的软件"
-"包)。\n"
-"  -z#                        设置构造软件包时，使用的压缩率.\n"
+"  --old，--new               选择档案的格式.\n"
+"  --nocheck                  关闭对主控文件的检查(可能导致生成坏的软件包)。\n"
+"  -z#                        设置构造软件包时，使用的压缩率。\n"
 "  -Z<type>                   设置建档时所使用的压缩类型。\n"
-"                             可用值：gzip、bzip2、none。\n"
+"                             可用值：gzip、bzip2、lzma、none。\n"
 "\n"
 
 #: dpkg-deb/main.c:106
@@ -4453,9 +4452,9 @@ msgstr ""
 
 #: scripts/dpkg-divert.pl:74 scripts/dpkg-statoverride.pl:56
 #: scripts/update-alternatives.pl:281
-#, fuzzy, perl-format
+#, perl-format
 msgid "two commands specified: %s and --%s"
-msgstr "指定了两种模式：%s 以及 --%s"
+msgstr "指定了两个命令：%s 和 --%s"
 
 #: scripts/dpkg-divert.pl:107
 #, perl-format
@@ -5008,7 +5007,7 @@ msgstr ""
 "版权所有 (C) 2000-2002 Wichert Akkerman。"
 
 #: scripts/update-alternatives.pl:74
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "Usage: %s [<option> ...] <command>\n"
 "\n"
@@ -5054,28 +5053,26 @@ msgstr ""
 "    [--slave <链接> <名称> <路径>] ...\n"
 "                                 在系统中加入一组替换项。\n"
 "  --remove <名称> <路径>         从 <名称> 替换组中去除 <路径> 项。\n"
-"  --remove-all <名称>            从选替系统(alternatives system)中删除<名称> "
-"替换组。\n"
+"  --remove-all <名称>            从替换系统中删除 <名称> 替换组。\n"
 "  --auto <名称>                  将 <名称> 的主链接切换到自动模式。\n"
 "  --display <名称>               显示关于 <名称> 替换组的信息。\n"
 "  --list <名称>                  列出 <名称> 替换组中所有的可用替换项。\n"
-"  --config <名称>                列出 <名称> 替换组中的可选项，并就使用其中哪"
-"一个，征询用户的意见。\n"
-"  --set <名称> <路径>            将 <路径> 设置为 <名称> 的可选项。\n"
+"  --config <名称>                列出 <名称> 替换组中的可选项，并就使用其中\n"
+"                                 哪一个，征询用户的意见。\n"
+"  --set <名称> <路径>            将 <路径> 设置为 <名称> 的替换项。\n"
 "  --all                          对所有可选项一一调用 --config 命令。\n"
 "\n"
-"<链接> 是指向 /etc/alternatives/<名称> 的符号链接。\n"
+"<链接> 是指向 %s/<名称> 的符号链接。\n"
 "    (如 /usr/bin/pager)\n"
-"<名称> 是该链接替换组的主控名(master name)。\n"
+"<名称> 是该链接替换组的主控名。\n"
 "    (如 pager)\n"
-"<路径> 是替换项文件的位置。\n"
+"<路径> 是替换项目标文件的位置。\n"
 "    (如 /usr/bin/less)\n"
 "<优先级> 是一个整数，在自动模式下，这个数字越高的选项，其优先级也就越高。\n"
 "\n"
 "选项：\n"
 "   --altdir <目录>               指定不同的可选项目录。\n"
-"   --admindir <目录>             指定不同的管理目录(administrative "
-"directory)。\n"
+"   --admindir <目录>             指定不同的管理目录。\n"
 "   --test                        仅仅演示要进行的操作，而不是真正的执行它"
 "们。\n"
 "   --verbose                     详尽的操作进行信息，更多的输出。\n"
@@ -5085,7 +5082,7 @@ msgstr ""
 
 #: scripts/update-alternatives.pl:127
 msgid "invalid update mode"
-msgstr ""
+msgstr "无效的更新模式"
 
 #: scripts/update-alternatives.pl:131
 #, perl-format
@@ -5158,13 +5155,13 @@ msgid "Current `best' version is %s."
 msgstr "目前“最佳”的版本为 %s。"
 
 #: scripts/update-alternatives.pl:232
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "warning: %s is supposed to be a symlink to %s, \n"
 "or nonexistent; however, readlink failed: %s"
 msgstr ""
-"警告：%s 应该是指向 %s 的符号链接(symlink)\n"
-" （或者不存在），但读取链接失败：%s"
+"警告：%s 应该是指向 %s 的符号链接，\n"
+"或者不存在；但读取链接失败：%s"
 
 #: scripts/update-alternatives.pl:244
 #, perl-format
@@ -5177,9 +5174,9 @@ msgid "Updating %s (%s) to point to %s."
 msgstr "正在更新 %s（%s）指向 %s。"
 
 #: scripts/update-alternatives.pl:256
-#, fuzzy, perl-format
+#, perl-format
 msgid "Using '%s' to provide '%s'."
-msgstr "使用 “%s” 来提供 “%s”。"
+msgstr "使用“%s”来提供“%s”。"
 
 #: scripts/update-alternatives.pl:270 scripts/update-alternatives.pl:616
 #, perl-format
@@ -5338,13 +5335,13 @@ msgid "Last package providing %s (%s) removed, deleting it."
 msgstr "最后一个提供 %s（%s）的软件包已移除，删除中。"
 
 #: scripts/update-alternatives.pl:631
-#, fuzzy, perl-format
+#, perl-format
 msgid ""
 "There is no program which provides %s.\n"
 "Nothing to configure.\n"
 msgstr ""
-"只有一个程序提供 %s\n"
-"（%s）。无须做任何配置。\n"
+"没有程序提供 %s。\n"
+"无须做任何配置。\n"
 
 #: scripts/update-alternatives.pl:637
 #, perl-format
@@ -5477,73 +5474,56 @@ msgstr "严重问题：%s"
 #~ msgid "`%s' field, reference to `%.255s': version contains ` '"
 #~ msgstr "“%s”字段，于“%.255s”：版本号含有“ ”"
 
-#, fuzzy
 #~ msgid "%s: can't open %s: %s"
-#~ msgstr "%s：无法打开 %s\n"
+#~ msgstr "%s：无法打开 %s：%s"
 
-#, fuzzy
 #~ msgid "%s: can't create %s: %s"
-#~ msgstr "%s：无法打开 %s\n"
+#~ msgstr "%s：无法创建 %s：%s"
 
-#, fuzzy
 #~ msgid "%s: error writing %s: %s"
-#~ msgstr "“%s”写入错误"
+#~ msgstr "%s：写入 %s 错误：%s"
 
-#, fuzzy
 #~ msgid "%s: read %s: %s"
-#~ msgstr "%s：读取 %s 时出错\n"
+#~ msgstr "%s：读取 %s：%s"
 
-#, fuzzy
 #~ msgid "%s: close %s after read: %s"
-#~ msgstr "读取完毕“%.255s”后，无法关闭该文件"
+#~ msgstr "%s：关闭 %s 在读取之后：%s"
 
-#, fuzzy
 #~ msgid "%s: error closing %s: %s"
-#~ msgstr "处理 %s 时出错：%s\n"
+#~ msgstr "%s：关闭 %s 出错：%s"
 
-#, fuzzy
 #~ msgid "--admindir needs a directory argument"
-#~ msgstr "--build 需要一个目录名作为参数"
+#~ msgstr "--admindir 需要一个目录名作为参数"
 
-#, fuzzy
 #~ msgid "--remove needs a single argument"
-#~ msgstr "--%s 需要一个 .deb 文件的文件名作为参数"
+#~ msgstr "--remove 只需要一个参数"
 
-#, fuzzy
 #~ msgid "--truename needs a single argument"
-#~ msgstr "--build 需要一个目录名作为参数"
+#~ msgstr "--truename 只需要一个参数"
 
-#, fuzzy
 #~ msgid "--remove needs one arguments"
-#~ msgstr "--%s 不需要带任何参数"
+#~ msgstr "--remove 只需要一个参数"
 
-#, fuzzy
 #~ msgid "dpkg-statoverride: %s"
-#~ msgstr "statoverride 文件 “%.250s”"
+#~ msgstr "dpkg-statoverride：%s"
 
-#, fuzzy
 #~ msgid "open %s: %s"
-#~ msgstr "处理 %s 时出错：%s\n"
+#~ msgstr "打开 %s：%s"
 
-#, fuzzy
 #~ msgid "read %s: %s"
-#~ msgstr "被 %s 转移到了(diverted by)：%s\n"
+#~ msgstr "读取 %s：%s"
 
-#, fuzzy
 #~ msgid "%s: read %s: %d"
-#~ msgstr "%s：读取 %s 时出错：%d\n"
+#~ msgstr "%s：读取 %s ：%d"
 
-#, fuzzy
 #~ msgid "--admindir needs a <directory> argument"
-#~ msgstr "--build 需要一个目录名作为参数"
+#~ msgstr "--admindir 需要一个目录名作为参数"
 
-#, fuzzy
 #~ msgid "failed to open %s: %s"
-#~ msgstr "无法运行 %s (%.250s)"
+#~ msgstr "打开 %s 失败：%s"
 
-#, fuzzy
 #~ msgid "unable to install %s as %s"
-#~ msgstr "无法把“%.250s”安装到“%.250s”"
+#~ msgstr "无法安装 %s 作为 %s"
 
 #~ msgid "version a has bad syntax: %s\n"
 #~ msgstr "左侧的版本号有语法错误：%s\n"
