Updated Swedish translation.
Updated main translation to 928t.
Re-generated template file for scripts.
Updated scripts translation to 482t.

--- a/debian/changelog
+++ b/debian/changelog
@@ -41,9 +41,11 @@ dpkg (1.14.15) UNRELEASED; urgency=low
   * Vietnamese (Clytie Siddall). Closes: #459016
   * French (Christian Perrier).
   * Simplified Chinese (Deng Xiyue). Closes: #459018
+  * Swedish (Peter Karlsson).
 
   [ Updated scripts translations ]
   * French (Christian Perrier).
+  * Swedish (Peter Karlsson).
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson).
