--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-01-04  Peter Karlsson  <peterk@debian.org>
+
+	* sv.po: Updated to 482t.
+
 2008-01-02  Christian Perrier  <bubulle@debian.org>
 
 	* fr.po: Updated to 482t and converted to UTF-8.
