--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-19  Peter Karlsson  <peterk@debian.org>
+
+	* sv.po: Updated to 928t.
+
 2008-01-04  Christian Perrier  <bubulle@debian.org>
 
 	* zh_CN.po: Updated to 928t.
